# pytest-speedguard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pytest_duration_guard/: __init__.py  baseline.py  stats.py
src/pytest_speedguard/: __init__.py  baseline.py  plugin.py  report.py  stats.py
tests/: conftest.py  test_baseline.py  test_integration.py  test_report.py  test_stats.py
